# a2a-multiple-agents-on-single-host

./: .dockerignore  .env-sample  Dockerfile  LICENSE  README.md  a2a_client_app.py  checks.sh  main.py  pyproject.toml  request.json  start.sh
src/a2a/: a2a_client.py  a2a_fastapi_app.py  a2a_utils.py
src/agent/: analyzer_agent.py  conversation_agent.py  trending_topics_agent.py
